<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signup">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/centerline1"
    android:layout_centerInParent="true">

</RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/centerline1"
        android:layout_marginBottom="150dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_user"
            android:textColor="#000"
            android:textSize="40sp"
            android:textStyle="bold"></TextView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nice_to_see_you_here"
            android:textSize="20sp"
            android:textColor="#000"
            android:textStyle="bold"></TextView>
    </LinearLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/semail"
        android:layout_above="@+id/centerline1"
        >
        <EditText
            android:id="@+id/signupemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress"
            android:autofillHints="">
        </EditText>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:id="@+id/spassword"
        android:layout_below="@+id/centerline1"
        app:passwordToggleEnabled="true"
        >
        <EditText
            android:id="@+id/signuppassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_password"
           android:inputType="numberPassword"
            android:autofillHints="">
        </EditText>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/spassword"
        android:layout_marginTop="50dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/usersignup"
            android:text="@string/sign_up"
            android:textColor="#000"
            android:textSize="30sp"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:padding="5dp"
            android:textStyle="bold"
            android:background="@drawable/button_design"
            ></TextView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/signuplogin"
            android:text="@string/want_to_login"
            android:textSize="15sp"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:layout_marginTop="50dp"
            android:textStyle="bold"
            android:textColor="#000"
            ></TextView>
    </LinearLayout>
</RelativeLayout>