<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="7dp"
        app:cardMaxElevation="7dp"
        app:cardCornerRadius="7dp"
        >

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:padding="5dp"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hello_how_are_you"
                    android:textSize="30sp"
                    android:textColor="#000"
                    android:layout_weight="1"
                    >
                </TextView>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="90dp"
                    android:layout_weight="0"
                    android:src="@drawable/ic_baseline_more_vert_24"
                    android:contentDescription="@string/todo"
                    android:layout_marginStart="90dp">

                </ImageView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp"
                android:layout_margin="5dp"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#000"
                    android:textSize="20sp"
                    android:text="@string/i_am_fine_bro">
                </TextView>
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</RelativeLayout>